WIP git build hibernate errors